--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/jjmckenzie704/bamazon#readme",
   "dependencies": {
+    "columnify": "^1.5.4",
+    "console.table": "^0.10.0",
     "dotenv": "^6.0.0",
     "inquirer": "^5.2.0",
     "mysql": "^2.15.0"
